--- a/composer.json
+++ b/composer.json
@@ -48,8 +48,13 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "compile": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ]
+        
     },
+    
     "extra": {
         "laravel": {
             "dont-discover": []
