--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=coordinates
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -42,6 +42,8 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+
+CLOUDINARY_URL=cloudinary://933294316261667:IrsgqaFM5doR68HPu4SUaoBNlkk@dm8uozfd4
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
